crates/kotlin-syntax/tests/snapshots/lexer_snapshots__lex_raw_string.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"""
a
raw
string"""

TOKENS:
OPEN_RAW_QUOTE "\"\"\""
STRING_CONTENT "\na\nraw\nstring"
CLOSE_RAW_QUOTE "\"\"\""
NEWLINE "\n"

LEX_ERRORS:
<none>
