crates/kotlin-syntax/tests/snapshots/lexer_snapshots__lex_string.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"a normal string"

TOKENS:
OPEN_QUOTE "\""
STRING_CONTENT "a normal string"
CLOSE_QUOTE "\""
NEWLINE "\n"

LEX_ERRORS:
<none>
