crates/kotlin-syntax/tests/snapshots/lexer_snapshots__multi_dollar_interpolation.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
val short = $$"User: $$name"
val long = $$$"User: $$${user.name}"
val mixed = $$"Literal $ and $$variable"
val rawTemplate = $$"""
    Cost: $$$$price
    Items: $${items.size}
"""

TOKENS:
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "short"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_QUOTE "$$\""
STRING_CONTENT "User: "
TEMPLATE_SHORT_START "$$"
IDENTIFIER "name"
CLOSE_QUOTE "\""
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "long"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_QUOTE "$$$\""
STRING_CONTENT "User: "
TEMPLATE_EXPR_START "$$${"
IDENTIFIER "user"
DOT "."
IDENTIFIER "name"
R_BRACE "}"
CLOSE_QUOTE "\""
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "mixed"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_QUOTE "$$\""
STRING_CONTENT "Literal $ and "
TEMPLATE_SHORT_START "$$"
IDENTIFIER "variable"
CLOSE_QUOTE "\""
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "rawTemplate"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_RAW_QUOTE "$$\"\"\""
STRING_CONTENT "\n    Cost: $$"
TEMPLATE_SHORT_START "$$"
IDENTIFIER "price"
STRING_CONTENT "\n    Items: "
TEMPLATE_EXPR_START "$${"
IDENTIFIER "items"
DOT "."
IDENTIFIER "size"
R_BRACE "}"
STRING_CONTENT "\n"
CLOSE_RAW_QUOTE "\"\"\""
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>
