crates/kotlin-syntax/tests/snapshots/lexer_snapshots__not_is_and_not_in.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
!is !in

TOKENS:
NOT_IS "!is"
WHITESPACE " "
NOT_IN "!in"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>
