crates/kotlin-syntax/tests/snapshots/lexer_snapshots__operators.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
val a = b ?: c
val d = a?.length
val e = !!d
val f = 1..10
val g = 1..<10
val h = x == y
val i = x === y
val j = x != y
val k = x !== y

TOKENS:
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "a"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
IDENTIFIER "b"
WHITESPACE " "
ELVIS "?:"
WHITESPACE " "
IDENTIFIER "c"
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "d"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
IDENTIFIER "a"
SAFE_ACCESS "?."
IDENTIFIER "length"
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "e"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
NOT_NULL_ASSERT "!!"
IDENTIFIER "d"
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "f"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
RANGE ".."
INTEGER_LITERAL "10"
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "g"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
RANGE_UNTIL "..<"
INTEGER_LITERAL "10"
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "h"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
IDENTIFIER "x"
WHITESPACE " "
EQUAL_EQUAL "=="
WHITESPACE " "
IDENTIFIER "y"
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "i"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
IDENTIFIER "x"
WHITESPACE " "
SHEQ "==="
WHITESPACE " "
IDENTIFIER "y"
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "j"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
IDENTIFIER "x"
WHITESPACE " "
NOT_EQUAL "!="
WHITESPACE " "
IDENTIFIER "y"
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "k"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
IDENTIFIER "x"
WHITESPACE " "
SHNE "!=="
WHITESPACE " "
IDENTIFIER "y"
NEWLINE "\n"

LEX_ERRORS:
<none>
