crates/kotlin-syntax/tests/snapshots/lexer_snapshots__safe_as.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
as?

TOKENS:
AS_SAFE "as?"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>
